// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: fail + errors-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :x: Mjolnir QA — FAIL

**Score:** 35/100

| Severity | Count |
| --- | --- |
| Errors | 5 |

Critical issues found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: fail + full 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :x: Mjolnir QA — FAIL

**Score:** 35/100

Critical issues found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: fail + infos-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :x: Mjolnir QA — FAIL

**Score:** 35/100

Critical issues found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: fail + mixed 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :x: Mjolnir QA — FAIL

**Score:** 35/100

| Severity | Count |
| --- | --- |
| Errors | 2 |
| Warnings | 4 |
| Info | 6 |

Critical issues found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: fail + warnings-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :x: Mjolnir QA — FAIL

**Score:** 35/100

| Severity | Count |
| --- | --- |
| Warnings | 3 |

Critical issues found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: pass + errors-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

| Severity | Count |
| --- | --- |
| Errors | 5 |

All checks passed.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: pass + full 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

All checks passed.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: pass + infos-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

All checks passed.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: pass + mixed 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

| Severity | Count |
| --- | --- |
| Errors | 2 |
| Warnings | 4 |
| Info | 6 |

All checks passed.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: pass + warnings-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

| Severity | Count |
| --- | --- |
| Warnings | 3 |

All checks passed.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: warn + errors-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :warning: Mjolnir QA — WARN

**Score:** 72/100

| Severity | Count |
| --- | --- |
| Errors | 5 |

Some warnings found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: warn + full 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :warning: Mjolnir QA — WARN

**Score:** 72/100

Some warnings found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: warn + infos-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :warning: Mjolnir QA — WARN

**Score:** 72/100

Some warnings found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: warn + mixed 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :warning: Mjolnir QA — WARN

**Score:** 72/100

| Severity | Count |
| --- | --- |
| Errors | 2 |
| Warnings | 4 |
| Info | 6 |

Some warnings found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderCommentBody: warn + warnings-only 1`] = `
"<!-- mjolnir-pr-comment:v1 -->
## :warning: Mjolnir QA — WARN

**Score:** 72/100

| Severity | Count |
| --- | --- |
| Warnings | 3 |

Some warnings found.

---
*Commit: \`abc1234\`*"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: fail + errors-only 1`] = `
"## :x: Mjolnir QA — FAIL

**Score:** 35/100

| Severity | Count |
| --- | --- |
| :x: Errors | 5 |

Critical issues found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: fail + full 1`] = `
"## :x: Mjolnir QA — FAIL

**Score:** 35/100

Critical issues found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: fail + infos-only 1`] = `
"## :x: Mjolnir QA — FAIL

**Score:** 35/100

Critical issues found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: fail + mixed 1`] = `
"## :x: Mjolnir QA — FAIL

**Score:** 35/100

| Severity | Count |
| --- | --- |
| :x: Errors | 2 |
| :warning: Warnings | 4 |
| :information_source: Info | 6 |

Critical issues found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: fail + warnings-only 1`] = `
"## :x: Mjolnir QA — FAIL

**Score:** 35/100

| Severity | Count |
| --- | --- |
| :warning: Warnings | 3 |

Critical issues found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: pass + errors-only 1`] = `
"## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

| Severity | Count |
| --- | --- |
| :x: Errors | 5 |

All checks passed.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: pass + full 1`] = `
"## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

All checks passed.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: pass + infos-only 1`] = `
"## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

All checks passed.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: pass + mixed 1`] = `
"## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

| Severity | Count |
| --- | --- |
| :x: Errors | 2 |
| :warning: Warnings | 4 |
| :information_source: Info | 6 |

All checks passed.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: pass + warnings-only 1`] = `
"## :white_check_mark: Mjolnir QA — PASS

**Score:** 95/100

| Severity | Count |
| --- | --- |
| :warning: Warnings | 3 |

All checks passed.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: warn + errors-only 1`] = `
"## :warning: Mjolnir QA — WARN

**Score:** 72/100

| Severity | Count |
| --- | --- |
| :x: Errors | 5 |

Some warnings found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: warn + full 1`] = `
"## :warning: Mjolnir QA — WARN

**Score:** 72/100

Some warnings found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: warn + infos-only 1`] = `
"## :warning: Mjolnir QA — WARN

**Score:** 72/100

Some warnings found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: warn + mixed 1`] = `
"## :warning: Mjolnir QA — WARN

**Score:** 72/100

| Severity | Count |
| --- | --- |
| :x: Errors | 2 |
| :warning: Warnings | 4 |
| :information_source: Info | 6 |

Some warnings found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;

exports[`PR Comment Golden Suite (TI-018) > renderJobSummary: warn + warnings-only 1`] = `
"## :warning: Mjolnir QA — WARN

**Score:** 72/100

| Severity | Count |
| --- | --- |
| :warning: Warnings | 3 |

Some warnings found.

---
*Commit: \`abc1234\`*

> **Note:** This report was published to the job summary because PR comment publishing was not available.
"
`;
